--- a/canvas-svc.yml
+++ b/canvas-svc.yml
@@ -2,7 +2,6 @@ apiVersion: v1
 kind: Service
 metadata:
   name: canvas
-  namespace: canvas
   labels:
     name: canvas
 spec:
@@ -11,5 +10,5 @@ spec:
     name: canvas
   ports:
     - name: http
-      port: 7000
-      targetPort: http
+      port: 80
+      targetPort: 80
